style(theme): link align vertical center issue fix

--- a/projects/logo-software/theme/scss/ui/_ui.scss
+++ b/projects/logo-software/theme/scss/ui/_ui.scss
@@ -13,8 +13,12 @@
     // vertical-align: middle;
 
     &[class*=logo-i] {
+      display: flex;
+      align-items: center;
+      border: size(1px) solid transparent;
       border-radius: size(get("border.radius"));
       @extend .medium;
+      line-height: normal;
     }
   }
 
